# toolkit

./: .gitignore  config.json  fastinit.py  fastinit.spec  main.py  taskbar.py  taskswitcher.py
taskbar/: CMakeLists.txt  main.cpp  taskbar_controller.cpp  taskbar_controller.hpp
taskswitcher/: CMakeLists.txt  logging.cpp  logging.hpp  main.cpp  tracker.cpp  tracker.hpp  ui.cpp  ui.hpp
